# deferred-reference

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
src/: core_traits_impl.rs  defer.rs  defer_mut.rs  deferred.rs  lib.rs  pointer_length.rs  reference.rs  slice_like.rs  slice_like_impl.rs  slice_pointer_index.rs
